--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -3,7 +3,7 @@
     height: 100%;
     width: 100%;
     border: 1px solid #555;
-    background: #d34c4c;
+    background: rgb(240, 182, 182);
     .activeButton{
         background-color: rgb(51, 51, 243);
         div{
