--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 
 <mat-toolbar color="primary" class="example-toolbar">
-    <button mat-icon-button (click)="snav.toggle()"><mat-icon>menu</mat-icon></button>
+    <button mat-icon-button ><mat-icon>menu</mat-icon></button>
     <h1 class="example-app-name">Responsive App</h1>
   </mat-toolbar>
   
